Add cover image to metadata.yaml

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -4,4 +4,5 @@ author:
   - name: "F. J. S. Remmelzwaal"
 rights: "© 2025 F. J. S. Remmelzwaal. All rights reserved."
 created: "Arnhem, 27th July, 2025"
+cover-image: images/battery.png
 lang: "en"
